MiniC/miniC.output
Terminales no usados en la gramática

    "string"
    '+'
    '-'
    '*'
    '/'


Estado 46 conflictos: 4 desplazamiento/reducción
Estado 64 conflictos: 4 desplazamiento/reducción
Estado 65 conflictos: 4 desplazamiento/reducción
Estado 66 conflictos: 4 desplazamiento/reducción
Estado 67 conflictos: 4 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 "void" "id" "(" ")" "{" body "}"

    3 body: ε
    4     | body declaration
    5     | body statement

    6 $@2: ε

    7 declaration: "var" $@2 tipo id_list ";"

    8 $@3: ε

    9 declaration: "const" $@3 tipo id_list ";"

   10 tipo: "int"

   11 id_list: id_decl
   12        | id_list "," id_decl

   13 id_decl: "id"
   14        | "id" "=" expresion

   15 statement: "id" "=" expresion ";"
   16          | "{" statement_list "}"
   17          | "if" "(" expresion ")" "else" statement
   18          | "if" "(" expresion ")" statement
   19          | "while" "(" expresion ")" statement
   20          | "print" "(" print_list ")" ";"
   21          | "read" "(" read_list ")" ";"

   22 statement_list: statement_list statement
   23               | ε

   24 print_list: print_item
   25           | print_list "," print_item

   26 print_item: expresion

   27 read_list: "id"
   28          | read_list "," "id"

   29 expresion: expresion "+" expresion
   30          | expresion "-" expresion
   31          | expresion "*" expresion
   32          | expresion "/" expresion
   33          | "-" expresion
   34          | "(" expresion ")"
   35          | "id"
   36          | "num"


Terminales con las reglas donde aparecen

    $end (0) 0
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    error (256)
    "id" <cadena> (258) 2 13 14 15 27 28 35
    "num" <cadena> (259) 36
    "string" <cadena> (260)
    "void" (261) 2
    "var" (262) 7
    "const" (263) 9
    "if" (264) 17 18
    "else" (265) 17
    "while" (266) 19
    "print" (267) 20
    "read" (268) 21
    "int" (269) 10
    "+" (270) 29
    "-" (271) 30 33
    "=" (272) 14 15
    ";" (273) 7 9 15 20 21
    "," (274) 12 25 28
    "(" (275) 2 17 18 19 20 21 34
    ")" (276) 2 17 18 19 20 21 34
    "{" (277) 2 16
    "}" (278) 2 16
    "*" (279) 31
    "/" (280) 32
    UMINUS (281)
    NOELSE (282)


No terminales con las reglas donde aparecen

    $accept (32)
        on left: 0
    program (33)
        on left: 2
        on right: 0
    $@1 (34)
        on left: 1
        on right: 2
    body (35)
        on left: 3 4 5
        on right: 2 4 5
    declaration (36)
        on left: 7 9
        on right: 4
    $@2 (37)
        on left: 6
        on right: 7
    $@3 (38)
        on left: 8
        on right: 9
    tipo (39)
        on left: 10
        on right: 7 9
    id_list (40)
        on left: 11 12
        on right: 7 9 12
    id_decl (41)
        on left: 13 14
        on right: 11 12
    statement (42)
        on left: 15 16 17 18 19 20 21
        on right: 5 17 18 19 22
    statement_list (43)
        on left: 22 23
        on right: 16 22
    print_list (44)
        on left: 24 25
        on right: 20 25
    print_item (45)
        on left: 26
        on right: 24 25
    read_list (46)
        on left: 27 28
        on right: 21 28
    expresion <codigo> (47)
        on left: 29 30 31 32 33 34 35 36
        on right: 14 15 17 18 19 26 29 30 31 32 33 34


Estado 0

    0 $accept: • program $end

    $default  reduce usando la regla 1 ($@1)

    program  ir al estado 1
    $@1      ir al estado 2


Estado 1

    0 $accept: program • $end

    $end  desplazar e ir al estado 3


Estado 2

    2 program: $@1 • "void" "id" "(" ")" "{" body "}"

    "void"  desplazar e ir al estado 4


Estado 3

    0 $accept: program $end •

    $default  aceptar


Estado 4

    2 program: $@1 "void" • "id" "(" ")" "{" body "}"

    "id"  desplazar e ir al estado 5


Estado 5

    2 program: $@1 "void" "id" • "(" ")" "{" body "}"

    "("  desplazar e ir al estado 6


Estado 6

    2 program: $@1 "void" "id" "(" • ")" "{" body "}"

    ")"  desplazar e ir al estado 7


Estado 7

    2 program: $@1 "void" "id" "(" ")" • "{" body "}"

    "{"  desplazar e ir al estado 8


Estado 8

    2 program: $@1 "void" "id" "(" ")" "{" • body "}"

    $default  reduce usando la regla 3 (body)

    body  ir al estado 9


Estado 9

    2 program: $@1 "void" "id" "(" ")" "{" body • "}"
    4 body: body • declaration
    5     | body • statement

    "id"     desplazar e ir al estado 10
    "var"    desplazar e ir al estado 11
    "const"  desplazar e ir al estado 12
    "if"     desplazar e ir al estado 13
    "while"  desplazar e ir al estado 14
    "print"  desplazar e ir al estado 15
    "read"   desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "}"      desplazar e ir al estado 18

    declaration  ir al estado 19
    statement    ir al estado 20


Estado 10

   15 statement: "id" • "=" expresion ";"

    "="  desplazar e ir al estado 21


Estado 11

    7 declaration: "var" • $@2 tipo id_list ";"

    $default  reduce usando la regla 6 ($@2)

    $@2  ir al estado 22


Estado 12

    9 declaration: "const" • $@3 tipo id_list ";"

    $default  reduce usando la regla 8 ($@3)

    $@3  ir al estado 23


Estado 13

   17 statement: "if" • "(" expresion ")" "else" statement
   18          | "if" • "(" expresion ")" statement

    "("  desplazar e ir al estado 24


Estado 14

   19 statement: "while" • "(" expresion ")" statement

    "("  desplazar e ir al estado 25


Estado 15

   20 statement: "print" • "(" print_list ")" ";"

    "("  desplazar e ir al estado 26


Estado 16

   21 statement: "read" • "(" read_list ")" ";"

    "("  desplazar e ir al estado 27


Estado 17

   16 statement: "{" • statement_list "}"

    $default  reduce usando la regla 23 (statement_list)

    statement_list  ir al estado 28


Estado 18

    2 program: $@1 "void" "id" "(" ")" "{" body "}" •

    $default  reduce usando la regla 2 (program)


Estado 19

    4 body: body declaration •

    $default  reduce usando la regla 4 (body)


Estado 20

    5 body: body statement •

    $default  reduce usando la regla 5 (body)


Estado 21

   15 statement: "id" "=" • expresion ";"

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 33


Estado 22

    7 declaration: "var" $@2 • tipo id_list ";"

    "int"  desplazar e ir al estado 34

    tipo  ir al estado 35


Estado 23

    9 declaration: "const" $@3 • tipo id_list ";"

    "int"  desplazar e ir al estado 34

    tipo  ir al estado 36


Estado 24

   17 statement: "if" "(" • expresion ")" "else" statement
   18          | "if" "(" • expresion ")" statement

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 37


Estado 25

   19 statement: "while" "(" • expresion ")" statement

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 38


Estado 26

   20 statement: "print" "(" • print_list ")" ";"

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    print_list  ir al estado 39
    print_item  ir al estado 40
    expresion   ir al estado 41


Estado 27

   21 statement: "read" "(" • read_list ")" ";"

    "id"  desplazar e ir al estado 42

    read_list  ir al estado 43


Estado 28

   16 statement: "{" statement_list • "}"
   22 statement_list: statement_list • statement

    "id"     desplazar e ir al estado 10
    "if"     desplazar e ir al estado 13
    "while"  desplazar e ir al estado 14
    "print"  desplazar e ir al estado 15
    "read"   desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "}"      desplazar e ir al estado 44

    statement  ir al estado 45


Estado 29

   35 expresion: "id" •

    $default  reduce usando la regla 35 (expresion)


Estado 30

   36 expresion: "num" •

    $default  reduce usando la regla 36 (expresion)


Estado 31

   33 expresion: "-" • expresion

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 46


Estado 32

   34 expresion: "(" • expresion ")"

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 47


Estado 33

   15 statement: "id" "=" expresion • ";"
   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    ";"  desplazar e ir al estado 50
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52


Estado 34

   10 tipo: "int" •

    $default  reduce usando la regla 10 (tipo)


Estado 35

    7 declaration: "var" $@2 tipo • id_list ";"

    "id"  desplazar e ir al estado 53

    id_list  ir al estado 54
    id_decl  ir al estado 55


Estado 36

    9 declaration: "const" $@3 tipo • id_list ";"

    "id"  desplazar e ir al estado 53

    id_list  ir al estado 56
    id_decl  ir al estado 55


Estado 37

   17 statement: "if" "(" expresion • ")" "else" statement
   18          | "if" "(" expresion • ")" statement
   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    ")"  desplazar e ir al estado 57
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52


Estado 38

   19 statement: "while" "(" expresion • ")" statement
   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    ")"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52


Estado 39

   20 statement: "print" "(" print_list • ")" ";"
   25 print_list: print_list • "," print_item

    ","  desplazar e ir al estado 59
    ")"  desplazar e ir al estado 60


Estado 40

   24 print_list: print_item •

    $default  reduce usando la regla 24 (print_list)


Estado 41

   26 print_item: expresion •
   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52

    $default  reduce usando la regla 26 (print_item)


Estado 42

   27 read_list: "id" •

    $default  reduce usando la regla 27 (read_list)


Estado 43

   21 statement: "read" "(" read_list • ")" ";"
   28 read_list: read_list • "," "id"

    ","  desplazar e ir al estado 61
    ")"  desplazar e ir al estado 62


Estado 44

   16 statement: "{" statement_list "}" •

    $default  reduce usando la regla 16 (statement)


Estado 45

   22 statement_list: statement_list statement •

    $default  reduce usando la regla 22 (statement_list)


Estado 46

   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion
   33          | "-" expresion •

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52

    "+"       [reduce usando la regla 33 (expresion)]
    "-"       [reduce usando la regla 33 (expresion)]
    "*"       [reduce usando la regla 33 (expresion)]
    "/"       [reduce usando la regla 33 (expresion)]
    $default  reduce usando la regla 33 (expresion)


Estado 47

   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion
   34          | "(" expresion • ")"

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    ")"  desplazar e ir al estado 63
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52


Estado 48

   29 expresion: expresion "+" • expresion

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 64


Estado 49

   30 expresion: expresion "-" • expresion

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 65


Estado 50

   15 statement: "id" "=" expresion ";" •

    $default  reduce usando la regla 15 (statement)


Estado 51

   31 expresion: expresion "*" • expresion

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 66


Estado 52

   32 expresion: expresion "/" • expresion

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 67


Estado 53

   13 id_decl: "id" •
   14        | "id" • "=" expresion

    "="  desplazar e ir al estado 68

    $default  reduce usando la regla 13 (id_decl)


Estado 54

    7 declaration: "var" $@2 tipo id_list • ";"
   12 id_list: id_list • "," id_decl

    ";"  desplazar e ir al estado 69
    ","  desplazar e ir al estado 70


Estado 55

   11 id_list: id_decl •

    $default  reduce usando la regla 11 (id_list)


Estado 56

    9 declaration: "const" $@3 tipo id_list • ";"
   12 id_list: id_list • "," id_decl

    ";"  desplazar e ir al estado 71
    ","  desplazar e ir al estado 70


Estado 57

   17 statement: "if" "(" expresion ")" • "else" statement
   18          | "if" "(" expresion ")" • statement

    "id"     desplazar e ir al estado 10
    "if"     desplazar e ir al estado 13
    "else"   desplazar e ir al estado 72
    "while"  desplazar e ir al estado 14
    "print"  desplazar e ir al estado 15
    "read"   desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17

    statement  ir al estado 73


Estado 58

   19 statement: "while" "(" expresion ")" • statement

    "id"     desplazar e ir al estado 10
    "if"     desplazar e ir al estado 13
    "while"  desplazar e ir al estado 14
    "print"  desplazar e ir al estado 15
    "read"   desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17

    statement  ir al estado 74


Estado 59

   25 print_list: print_list "," • print_item

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    print_item  ir al estado 75
    expresion   ir al estado 41


Estado 60

   20 statement: "print" "(" print_list ")" • ";"

    ";"  desplazar e ir al estado 76


Estado 61

   28 read_list: read_list "," • "id"

    "id"  desplazar e ir al estado 77


Estado 62

   21 statement: "read" "(" read_list ")" • ";"

    ";"  desplazar e ir al estado 78


Estado 63

   34 expresion: "(" expresion ")" •

    $default  reduce usando la regla 34 (expresion)


Estado 64

   29 expresion: expresion • "+" expresion
   29          | expresion "+" expresion •
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52

    "+"       [reduce usando la regla 29 (expresion)]
    "-"       [reduce usando la regla 29 (expresion)]
    "*"       [reduce usando la regla 29 (expresion)]
    "/"       [reduce usando la regla 29 (expresion)]
    $default  reduce usando la regla 29 (expresion)


Estado 65

   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   30          | expresion "-" expresion •
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52

    "+"       [reduce usando la regla 30 (expresion)]
    "-"       [reduce usando la regla 30 (expresion)]
    "*"       [reduce usando la regla 30 (expresion)]
    "/"       [reduce usando la regla 30 (expresion)]
    $default  reduce usando la regla 30 (expresion)


Estado 66

   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   31          | expresion "*" expresion •
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52

    "+"       [reduce usando la regla 31 (expresion)]
    "-"       [reduce usando la regla 31 (expresion)]
    "*"       [reduce usando la regla 31 (expresion)]
    "/"       [reduce usando la regla 31 (expresion)]
    $default  reduce usando la regla 31 (expresion)


Estado 67

   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion
   32          | expresion "/" expresion •

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52

    "+"       [reduce usando la regla 32 (expresion)]
    "-"       [reduce usando la regla 32 (expresion)]
    "*"       [reduce usando la regla 32 (expresion)]
    "/"       [reduce usando la regla 32 (expresion)]
    $default  reduce usando la regla 32 (expresion)


Estado 68

   14 id_decl: "id" "=" • expresion

    "id"   desplazar e ir al estado 29
    "num"  desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32

    expresion  ir al estado 79


Estado 69

    7 declaration: "var" $@2 tipo id_list ";" •

    $default  reduce usando la regla 7 (declaration)


Estado 70

   12 id_list: id_list "," • id_decl

    "id"  desplazar e ir al estado 53

    id_decl  ir al estado 80


Estado 71

    9 declaration: "const" $@3 tipo id_list ";" •

    $default  reduce usando la regla 9 (declaration)


Estado 72

   17 statement: "if" "(" expresion ")" "else" • statement

    "id"     desplazar e ir al estado 10
    "if"     desplazar e ir al estado 13
    "while"  desplazar e ir al estado 14
    "print"  desplazar e ir al estado 15
    "read"   desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17

    statement  ir al estado 81


Estado 73

   18 statement: "if" "(" expresion ")" statement •

    $default  reduce usando la regla 18 (statement)


Estado 74

   19 statement: "while" "(" expresion ")" statement •

    $default  reduce usando la regla 19 (statement)


Estado 75

   25 print_list: print_list "," print_item •

    $default  reduce usando la regla 25 (print_list)


Estado 76

   20 statement: "print" "(" print_list ")" ";" •

    $default  reduce usando la regla 20 (statement)


Estado 77

   28 read_list: read_list "," "id" •

    $default  reduce usando la regla 28 (read_list)


Estado 78

   21 statement: "read" "(" read_list ")" ";" •

    $default  reduce usando la regla 21 (statement)


Estado 79

   14 id_decl: "id" "=" expresion •
   29 expresion: expresion • "+" expresion
   30          | expresion • "-" expresion
   31          | expresion • "*" expresion
   32          | expresion • "/" expresion

    "+"  desplazar e ir al estado 48
    "-"  desplazar e ir al estado 49
    "*"  desplazar e ir al estado 51
    "/"  desplazar e ir al estado 52

    $default  reduce usando la regla 14 (id_decl)


Estado 80

   12 id_list: id_list "," id_decl •

    $default  reduce usando la regla 12 (id_list)


Estado 81

   17 statement: "if" "(" expresion ")" "else" statement •

    $default  reduce usando la regla 17 (statement)
